# gpr-bench

./: 01_generate_answer_and_evaluate.py  02_compare_by_model.py  03_compare_by_prompt_type.py  04_statistical_test.py  LICENSE  README.md  helper.py  main.py  pyproject.toml  requirements.txt
benchmark/: gpr-bench-result-gpt-4o-mini-concise-prompt.xlsx  gpr-bench-result-gpt-4o-mini-default-prompt.xlsx  gpr-bench-result-o3-mini-concise-prompt.xlsx  gpr-bench-result-o3-mini-default-prompt.xlsx  gpr-bench-result-o4-mini-concise-prompt.xlsx  gpr-bench-result-o4-mini-default-prompt.xlsx
reports/: conciseness_statistical_test_results.md
tables/compare_by_model/: all_languages_conciseness_skill_statistics.xlsx  all_languages_conciseness_statistics.xlsx  all_languages_correctness_skill_statistics.xlsx  all_languages_correctness_statistics.xlsx  table_compare_by_model_conciseness.xlsx  table_compare_by_model_correctness.xlsx
tables/compare_by_prompt_type/: all_languages_conciseness_by_prompt_type_skill_statistics.xlsx  all_languages_conciseness_by_prompt_type_statistics.xlsx  all_languages_correctness_by_prompt_type_skill_statistics.xlsx  all_languages_correctness_by_prompt_type_statistics.xlsx  table_compare_by_prompt_type_conciseness.xlsx  table_compare_by_prompt_type_correctness.xlsx
