[project]
name = "gpr-bench"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "datasets==3.5.0",
    "matplotlib==3.10.1",
    "openai==1.75.0",
    "openpyxl==3.1.5",
    "openevals==0.0.18",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "scipy==1.15.2",
]